re PR tree-optimization/56635 (internal compiler error: in find_lattice_value, at tree-complex.c:15)

PR tree-optimization/56635
	* fold-const.c (operand_equal_p): For MEM_REF and TARGET_MEM_REF,
	require types_compatible_p types.

	* g++.dg/torture/pr56635.C: New test.

From-SVN: r196781